syntax = "proto3";

package setting;

service SettingService {
    rpc List (ListRequest) returns (Reply) {}
    rpc Save (SaveRequest) returns (Reply) {}
    rpc Get (GetRequest) returns (Reply) {}
    rpc Update (UpdateRequest) returns (Reply) {}
    rpc Remove (RemoveRequest) returns (Reply) {}
}

message ListRequest {
    string cat = 1;
}

message SaveRequest {
    string uuid = 1;
    uint32 master_id = 2;
    string category = 3;
    string name = 4;
    string value = 5;
    string doc = 6;
}

message GetRequest {
    uint32 id = 1;
    string uuid = 2;
}

message UpdateRequest {
    uint32 id = 1;
    string uuid = 2;
    uint32 master_id = 3;
    string category = 4;
    string name = 5;
    string value = 6;
    string doc = 7;
}

message RemoveRequest {
    uint32 id = 1;
    string uuid = 2;
}

message Reply { string data = 1; }
