syntax = "proto3";

package archive;

service Archive {
    rpc search (ArchiveRequest) returns (ArchiveReply) {}
    rpc filter (ArchiveRequest) returns (ArchiveReply) {}
    rpc checkValid (ArchiveRequest) returns (ArchiveReply) {}
    rpc checkValidWithId (ArchiveRequest) returns (ArchiveReply) {}

    rpc list (ArchiveRequest) returns (ArchiveReply) {}
    rpc save (SaveRequest) returns (ArchiveReply) {}
    rpc get (ArchiveGetRequest) returns (ArchiveReply) {}
    rpc update (ArchiveRequest) returns (ArchiveReply) {}
    rpc remove (ArchiveRequest) returns (ArchiveReply) {}

    rpc transferOut (ArchiveRequest) returns (ArchiveReply) {}
    rpc transferIn (ArchiveRequest) returns (ArchiveReply) {}

    rpc listPicture (ArchiveRequest) returns (ArchiveReply) {}
    rpc saveBase64 (ArchiveRequest) returns (ArchiveReply) {}
    rpc getPicture (ArchiveRequest) returns (ArchiveReply) {}

    rpc listIsolate (ArchiveRequest) returns (ArchiveReply) {}
    rpc getIsolate (ArchiveRequest) returns (ArchiveReply) {}
    rpc updateIsolate (ArchiveRequest) returns (ArchiveReply) {}
    rpc removeIsolate (ArchiveRequest) returns (ArchiveReply) {}
    rpc filterIsolate (ArchiveRequest) returns (ArchiveReply) {}
}

message ArchiveRequest { string data = 1; }

message SaveRequest {
    string uuid = 1;
    string sn = 2;
    string id_card = 3;
    string name = 4;
    string doc = 5;
}

message ArchiveReply { string data = 1; }

message ArchiveGetRequest {
    uint32 id = 1;
    string uuid = 2;
}
